kube/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: capitale
  namespace: capitale
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: capitale
  type: ClusterIP
