kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 1
  labels:
    app.kubernetes.io/instance: capitale
    app.kubernetes.io/name: capitale
  name: capitale
  namespace: capitale
spec:
  ingressClassName: traefik
  rules:
  - host: capitale.kak.im
    http:
      paths:
      - backend:
          service:
            name: capitale
            port:
              number: 80
        path: /
        pathType: Prefix
